@@ -73,8 +73,9 @@ t/MARC-Convert-Wikidata-Object-PublicationDate/05-date.t
 t/MARC-Convert-Wikidata-Object-PublicationDate/06-earliest_date.t
 t/MARC-Convert-Wikidata-Object-PublicationDate/07-end_time.t
 t/MARC-Convert-Wikidata-Object-PublicationDate/08-latest_date.t
-t/MARC-Convert-Wikidata-Object-PublicationDate/09-sourcing_circumstances.t
-t/MARC-Convert-Wikidata-Object-PublicationDate/10-start_time.t
+t/MARC-Convert-Wikidata-Object-PublicationDate/09-precision.t
+t/MARC-Convert-Wikidata-Object-PublicationDate/10-sourcing_circumstances.t
+t/MARC-Convert-Wikidata-Object-PublicationDate/11-start_time.t
 t/MARC-Convert-Wikidata-Object-Publisher/01-use.t
 t/MARC-Convert-Wikidata-Object-Publisher/02-version.t
 t/MARC-Convert-Wikidata-Object-Publisher/03-new.t
